# mythcode

./: AGENTS.md  CLAUDE.md  Cargo.toml  DOCS.md  README.md  loveyoumom.md
.github/workflows/: release.yml
.zed/: settings.json
examples/extensions/: hello.ts  kitchen-sink.ts  no-delete.ts
extension-host/: host.ts
src/: acp_client.rs  cli.rs  extensions.rs  input.rs  main.rs  process.rs  render.rs  session.rs  spinner.rs  terminal_ui.rs  tui.rs  types.rs
src/tui/: commands.rs  events.rs  highlight.rs  history.rs  input_box.rs  keys.rs  markdown.rs  mod.rs  permission.rs  render.rs  select.rs  theme.rs
website/: index.html  package.json
website/src/: index.css  main.tsx
website/src/routes/: home.tsx  releases.tsx  root.tsx
