[package]
name = "mythcode"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "mythcode"
path = "src/main.rs"


[dependencies]
agent-client-protocol = { version = "0.10.4", features = ["unstable_session_model"] }
anyhow = "1.0"
async-trait = "0.1"
clap = { version = "4.5", features = ["derive"] }
ignore = "0.4"
inquire = "0.7"
serde_json = "1.0"
similar = "2.7"
tokio = { version = "1.48", features = [
  "macros",
  "process",
  "rt",
  "signal",
  "io-util",
  "io-std",
  "sync",
  "time",
] }
tokio-util = { version = "0.7", features = ["compat"] }
