[package]
name = "mythcode"
version = "0.1.3"
edition = "2024"
description = "A Rust CLI for talking to ACP-compatible coding agents from your terminal."
readme = "README.md"
repository = "https://github.com/lassejlv/minicode"

[[bin]]
name = "mythcode"
path = "src/main.rs"

[profile.dist]
inherits = "release"
lto = "thin"

[workspace.metadata.dist]
cargo-dist-version = "0.31.0"
ci = ["github"]
installers = ["npm"]
targets = [
  "x86_64-unknown-linux-gnu",
  "x86_64-apple-darwin",
  "aarch64-apple-darwin",
  "x86_64-pc-windows-msvc",
]
hosting = "github"
publish-jobs = ["npm"]
pr-run-mode = "plan"
allow-dirty = ["ci"]

[package.metadata.dist]
npm-scope = "@mythcode"
npm-package = "cli"

[dependencies]
agent-client-protocol = { version = "0.10.4", features = [
  "unstable_session_model",
  "unstable_session_resume",
] }
anyhow = "1.0"
async-trait = "0.1"
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.28"
ignore = "0.4"
ratatui = { version = "0.29", default-features = false, features = ["crossterm"] }
serde_json = "1.0"
unicode-width = "0.2"
similar = "2.7"
syntect = { version = "5", default-features = false, features = ["default-fancy"] }
tokio = { version = "1.48", features = [
  "macros",
  "process",
  "rt",
  "signal",
  "io-util",
  "io-std",
  "sync",
  "time",
] }
tokio-util = { version = "0.7", features = ["compat"] }
